<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb3_outdoor_nav2</name>
  <version>0.1.0</version>
  <description>SLAM + Nav2 bringup for TurtleBot3 Burger (outdoor / open area)</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>ydlidar_ros2_driver</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tb3_tools</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
